fix: Toggle arrows at the ImageGallery in accordance to scroll position (#43)
* Implement arrow toggling logic with useInView

- The right/up arrow only shows when the first image is not visible
- The left/down arrow only shows when the last image is not visible

* Remove padding from ImageGallerySelector

* Updage CHANGELOG

* Fix camelCase on "fetchPriority"

--- a/packages/core/src/components/ui/ImageGallery/image-gallery-selector.module.scss
+++ b/packages/core/src/components/ui/ImageGallery/image-gallery-selector.module.scss
@@ -62,7 +62,7 @@
   [data-fs-image-gallery-selector-elements] {
     display: flex;
     column-gap: var(--fs-spacing-1);
-    padding: var(--fs-spacing-0) var(--fs-spacing-6);
+    padding: var(--fs-spacing-0);
     overflow-x: auto;
     scroll-behavior: smooth;
 
@@ -100,7 +100,7 @@
     @include media(">=notebook") {
       flex-direction: column;
       row-gap: var(--fs-spacing-2);
-      padding: var(--fs-spacing-6) var(--fs-spacing-0);
+      padding: var(--fs-spacing-0);
       overflow-y: hidden;
     }
   }
